[gd_scene load_steps=18 format=2]

[ext_resource path="res://source/script/entity/camera/CameraStateTarg.gd" type="Script" id=1]
[ext_resource path="res://source/script/entity/camera/CameraStateFree.gd" type="Script" id=2]
[ext_resource path="res://source/script/entity/camera/CameraStateOrbi.gd" type="Script" id=3]
[ext_resource path="res://source/script/entity/camera/CameraStateIsom.gd" type="Script" id=4]
[ext_resource path="res://source/script/entity/camera/CameraStateLook.gd" type="Script" id=5]
[ext_resource path="res://source/script/entity/camera/CameraStateVehi.gd" type="Script" id=6]
[ext_resource path="res://source/script/entity/camera/CameraStateLock.gd" type="Script" id=7]
[ext_resource path="res://source/script/entity/camera/Camera.gd" type="Script" id=8]
[ext_resource path="res://source/scene/entity/state_controller.tscn" type="PackedScene" id=9]

[sub_resource type="SphereShape" id=4]
radius = 0.5

[sub_resource type="SphereShape" id=8]
radius = 0.5

[sub_resource type="Shader" id=6]
code = "shader_type canvas_item;

uniform float wave_speed = 3.0; // wave loop speed
uniform float wave_freq = 10.0; // wave vertical frequency
uniform float wave_width = 1.0; // wave width
uniform vec4 tint_color : hint_color = vec4(1.0, 1.0, 1.0, 1.0); // tint color

void fragment() {
    vec2 scale_UV = SCREEN_UV;
    vec2 wave_uv_offset;
    wave_uv_offset.x = cos((TIME * wave_speed) + UV.x + UV.y * wave_freq * 2.0) * wave_width * 0.01;
    vec4 screen_tex = texture(SCREEN_TEXTURE, scale_UV + wave_uv_offset);

    // Blend the screen texture with the tint color
    vec4 tinted_color = mix(screen_tex, tint_color, tint_color.a);

    COLOR = tinted_color;
}
"

[sub_resource type="ShaderMaterial" id=7]
shader = SubResource( 6 )
shader_param/wave_speed = 10.0
shader_param/wave_freq = 30.0
shader_param/wave_width = 0.075
shader_param/tint_color = Color( 0, 0.27451, 1, 0.254902 )

[sub_resource type="Animation" id=1]
resource_name = "BarsAppear"
tracks/0/type = "bezier"
tracks/0/path = NodePath("CanvasCamera/BarTop:rect_scale:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("CanvasCamera/BarBottom:rect_scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}

[sub_resource type="Animation" id=2]
resource_name = "BarsDisappear"
tracks/0/type = "bezier"
tracks/0/path = NodePath("CanvasCamera/BarTop:rect_scale:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("CanvasCamera/BarBottom:rect_scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}

[sub_resource type="Animation" id=5]
resource_name = "RESET"
tracks/0/type = "bezier"
tracks/0/path = NodePath("CanvasCamera/BarTop:rect_scale:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("CanvasCamera/BarBottom:rect_scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=3]
resource_name = "Wobble"
length = 7.5
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("../CameraLens:rotation_degrees:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0.2, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, -0.1, -0.25, 0, 0.25, 0, 0.3, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1.95, 3.45, 4.65, 5.55, 7.5 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("../CameraLens:rotation_degrees:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0.2, -0.25, 0, 0.25, 0, -6.06642e-21, -0.25, 0, 0.25, 0, -0.1, -0.25, 0, 0.25, 0, 0.5, -0.25, 0, 0.25, 0, -6.06642e-21, -0.25, 0, 0.25, 0, 0.2, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1.05, 2.4, 3.9, 6.3, 7.5 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("../CameraLens:rotation_degrees:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -0.3, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0.3, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1.7, 3.6, 5.5, 7.5 )
}

[node name="Camera" type="SpringArm"]
collision_mask = 4
shape = SubResource( 4 )
script = ExtResource( 8 )

[node name="StateController" parent="." instance=ExtResource( 9 )]

[node name="Free" type="Node" parent="StateController"]
script = ExtResource( 2 )

[node name="Orbi" type="Node" parent="StateController"]
script = ExtResource( 3 )

[node name="Targ" type="Node" parent="StateController"]
script = ExtResource( 1 )

[node name="Isom" type="Node" parent="StateController"]
script = ExtResource( 4 )

[node name="Look" type="Node" parent="StateController"]
script = ExtResource( 5 )

[node name="Vehi" type="Node" parent="StateController"]
script = ExtResource( 6 )

[node name="Lock" type="Node" parent="StateController"]
script = ExtResource( 7 )

[node name="CameraLens" type="Camera" parent="."]
transform = Transform( 0.999994, 0, 0.00349065, 0, 1, 0, -0.00349065, 0, 0.999994, 0, 0, 0 )
fov = 60.0
near = 0.01
far = 8192.0

[node name="Area" type="Area" parent="."]
collision_layer = 2
collision_mask = 13

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 8 )

[node name="OverlayWater" type="CanvasLayer" parent="."]
layer = 0

[node name="ColorRect" type="ColorRect" parent="OverlayWater"]
material = SubResource( 7 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0.835294, 1, 1 )

[node name="Animation" type="Node" parent="."]

[node name="AnimationCam" type="Tween" parent="Animation"]
playback_process_mode = 0

[node name="AnimationBars" type="AnimationPlayer" parent="Animation"]
anims/BarsAppear = SubResource( 1 )
anims/BarsDisappear = SubResource( 2 )
anims/RESET = SubResource( 5 )

[node name="AnimationWobble" type="AnimationPlayer" parent="Animation"]
playback_process_mode = 0
anims/Wobble = SubResource( 3 )

[node name="CanvasCamera" type="CanvasLayer" parent="Animation"]

[node name="BarTop" type="ColorRect" parent="Animation/CanvasCamera"]
anchor_right = 1.0
margin_bottom = 96.0
grow_horizontal = 2
rect_scale = Vector2( 1, 1e-05 )
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="BarBottom" type="ColorRect" parent="Animation/CanvasCamera"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -86.0
margin_bottom = 10.0
grow_horizontal = 2
rect_scale = Vector2( 1, 1e-05 )
rect_pivot_offset = Vector2( 0, 96 )
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="area_entered" from="Area" to="." method="_on_Area_area_entered"]
[connection signal="area_exited" from="Area" to="." method="_on_Area_area_exited"]
